--- a/src/less/style.less
+++ b/src/less/style.less
@@ -66,3 +66,9 @@ body, a {
     font-family: "Lucida Console";
   }
 }
+
+.unfinished-warning {
+  font-size: 2rem;
+  font-style: bold;
+  color: #E74C3C;
+}
